# OpenCV-Tools

./: CMakeLists.txt  README.md  main.cpp
include/: opencv-tools.hpp
src/: custom_func.cpp  main.cpp
